<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="1dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:background="#454545"
        android:text="@string/btn5"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="5dp"
        android:background="#454545"
        android:text="@string/btn4"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="5dp"
        android:background="#454545"
        android:text="@string/btn3"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="5dp"
        android:background="#454545"
        android:text="@string/btn2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="5dp"
        android:background="#454545"
        android:text="@string/btn1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/image1"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_borsch" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/cesar"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_cesar" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/milk"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_milkshake" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/sat"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_spagetti" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/cupckacke"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:srcCompat="@drawable/ic_blinchik" />

</androidx.constraintlayout.widget.ConstraintLayout>